# vibecoding-kbd

./: .gitignore  CMakeLists.txt  README.md
src/: buzzer.c  buzzer.h  encoder.c  encoder.h  font5x7.h  main.c  matrix.c  matrix.h  st7735.c  st7735.h  voice_uart.c  voice_uart.h  ws2812.c  ws2812.h  ws2812.pio  ws2812.pio.h
